<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="6dp"
    android:layout_marginBottom="6dp"
    android:background="@color/cardBackground">

    <androidx.core.widget.NestedScrollView
        style="@style/NestedScrollBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="6dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_image_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/consistView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/sizeChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                app:chipSpacingHorizontal="12dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/smallSizeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:textColor="@color/textColorOnDark"
                    android:text="@string/pizza_small_size"
                    app:chipBackgroundColor="@color/chip_colors"
                    android:theme="@style/Theme.MaterialComponents.Light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/middleSizeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:textColor="@color/textColorOnDark"
                    android:text="@string/pizza_middle_size"
                    app:chipBackgroundColor="@color/chip_colors"
                    android:theme="@style/Theme.MaterialComponents.Light" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/largeSizeChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="false"
                    android:textColor="@color/textColorOnDark"
                    android:text="@string/pizza_large_size"
                    app:chipBackgroundColor="@color/chip_colors"
                    android:theme="@style/Theme.MaterialComponents.Light" />

            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginVertical="6dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/minusBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_minus_24"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/countView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/plusBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:src="@drawable/ic_plus_24"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/priceView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addToBasketBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/textColorOnDark"
                android:text="@string/add_to_busket_btn" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>